# petshop

./: .env-test  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 27019706082b_add_download_table.py  47329e9404ef_replace_automatic_updated_at_with_.py  50fb9a7296e4_add_downloads_total_view.py  60e7b8314b01_make_package_name_column_unique.py  76ed9efd00a8_rename_keywords_and_add_new_keywords_.py  8b98fb25b5bf_add_classifier_package_many_to_many_.py  a14164bdbf0d_drop_column_package_keywords_array.py  dd87d8a66a5e_add_package_table.py  f1ed49b3bdc5_add_index_on_package_name.py  f3311fd0ef3d_rename_package_classifiers_column.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  Browse.tsx  Header.tsx  PackageList.tsx  index.tsx  main.tsx  output.css  types.ts
petshop/: db.py  models.py
petshop/api/: main.py
petshop/importer/: cli.py  import_downloads.py  import_packages.py  utils.py
tests/: conftest.py
tests/petshop/importer/: test_import_downloads.py  test_utils.py
